syntax = "proto3";
package gokvm;

enum Location {
    RIGHT = 0;
    LEFT = 1;
    UP = 2;
    DOWN = 3;
}

message RegisterClientRequest {
    string ip = 1;
    int32 port = 2;
    Location location = 3;
}
message RegisterClientResponse{}

message SetClientActiveRequest {
    string ip = 1;
    int32 port = 2;
}
message SetClientActiveResponse {}

service Server {
    rpc RegisterClient(RegisterClientRequest) returns (RegisterClientResponse);
    rpc SetClientActive(SetClientActiveRequest) returns (SetClientActiveResponse);
}